--- a/QuickInventory/Client/Pages/Authentication.razor
+++ b/QuickInventory/Client/Pages/Authentication.razor
@@ -1,6 +1,11 @@
 ﻿@page "/authentication/{action}"
-@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-<RemoteAuthenticatorView Action="@Action" />
+@inject NavigationManager Navigation
+
+<RemoteAuthenticatorView Action="@Action">
+    <LogOutSucceeded>
+        <RedirectToIndex />
+    </LogOutSucceeded>
+</RemoteAuthenticatorView>
 
 @code{
     [Parameter] public string? Action { get; set; }
