--- a/QuickInventory/Client/_Imports.razor
+++ b/QuickInventory/Client/_Imports.razor
@@ -1,5 +1,9 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -7,5 +11,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
 @using QuickInventory.Client
-@using QuickInventory.Client.Shared
+@using QuickInventory.Client.Components
+@using QuickInventory.Client.Components.Shared
+
+@using QuickInventory.Shared.Models
