Traducciones de lógica de usuario concretadas.

--- a/QuickInventory/Client/App.razor
+++ b/QuickInventory/Client/App.razor
@@ -2,6 +2,7 @@
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                <Authorizing>Verificando autorización.</Authorizing>
                 <NotAuthorized>
                     @if (context.User.Identity?.IsAuthenticated != true)
                     {
