--- a/QUICK_INVENTORY.Client/Components/RegistroEntradasSalidas.razor
+++ b/QUICK_INVENTORY.Client/Components/RegistroEntradasSalidas.razor
@@ -1,5 +1,4 @@
-﻿
-<PageTitle>Registro de Entradas/Salidas</PageTitle>
+﻿<PageTitle>Registro de Entradas/Salidas</PageTitle>
 
 <div class="row justify-content-center">
     <div class="col-md-8 col-lg-4">
@@ -25,11 +24,12 @@
                 <InputSelect class="form-select" @bind-Value="model.RegistroTipoId">
                     @foreach (EnumRegistroTipo registroTipo in Enum.GetValues(typeof(EnumRegistroTipo)))
                     {
-                            <option value="@registroTipo">@registroTipo.ToString()</option>
+                        <option value="@registroTipo">@registroTipo.ToString()</option>
                     }
                 </InputSelect>
                 <ValidationMessage class="mb-3" For="@(() => model.RegistroTipoId)" />
             </div>
+
             <div class="form-group mb-3">
                 <button class="btn btn-success d-block">Enviar</button>
             </div>
@@ -40,14 +40,15 @@
 @code {
     [Inject]
     public required HttpClient HttpClient { get; set; }
+    [Inject]
+    public IApplicationServices Services { get; set; } = null!;
 
     ProductoRegistroCreateRequest model = new();
 
     private async void HandleSubmit()
     {
-        HttpResponseMessage httpRequestMessage = await HttpClient
-            .PostAsJsonAsync<ProductoRegistroCreateRequest>(
-                requestUri: "api/productos/registros",
-                value: model);
+        Result<ProductoRegistroCreateRequest>
+        result = await Services.ProductoRegistros
+            .InsertarProductoRegistro(createRequest: model);
     }
 }
