--- a/QUICK_INVENTORY.Client/_Imports.razor
+++ b/QUICK_INVENTORY.Client/_Imports.razor
@@ -12,9 +12,14 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 
+@using Ardalis.Result
+
 @using QUICK_INVENTORY.Client
 @using QUICK_INVENTORY.Client.Components
 @using QUICK_INVENTORY.Client.Layout
+@using QUICK_INVENTORY.Client.Data
+@using QUICK_INVENTORY.Client.Data.Services
+@using QUICK_INVENTORY.Client.Data.Services.Application
 
 @using QUICK_INVENTORY.Shared.Models
 @using QUICK_INVENTORY.Shared.Models.Requests
