Concretada funcionalidad de alta de movimientos para productos. Ajustes en enrutamiento general de la aplicación. Ajustes ligeros en el Layout principal y agregadas nuevas y próximas pantallas al menú de la aplicación.

--- a/QUICK_INVENTORY.Client/Layout/MainLayout.razor
+++ b/QUICK_INVENTORY.Client/Layout/MainLayout.razor
@@ -25,7 +25,7 @@
     </MudDrawer>
 
     <MudMainContent>
-        <MudGrid Justify="Justify.Center" Class="py-5">
+        <MudGrid Justify="Justify.Center" Class="my-3">
             <MudItem xs="10">
                 @Body
 
