--- a/QUICK_INVENTORY.Client/Pages/Productos/Crear.razor
+++ b/QUICK_INVENTORY.Client/Pages/Productos/Crear.razor
@@ -1,6 +1,15 @@
 ﻿@attribute [Route(ApplicationPages.Productos.Crear)]
 @attribute [Authorize]
 
+<MudGrid Justify="Justify.FlexStart" Class="mb-3">
+    <MudButton Color="Color.Primary"
+               Variant="Variant.Filled"
+               Href="@ApplicationPages.Productos.Listado"
+               StartIcon="@Icons.Material.Filled.ArrowBack">
+        Volver al Listado
+    </MudButton>
+</MudGrid>
+
 <MudGrid Justify="Justify.Center">
     <MudItem md="6" sm="10" xs="12">
         <EditForm Model="@Request" OnValidSubmit="@HandleValidSubmit">
