--- a/QUICK_INVENTORY.Client/Pages/Productos/Listado.razor
+++ b/QUICK_INVENTORY.Client/Pages/Productos/Listado.razor
@@ -7,8 +7,8 @@
     <MudButton Color="Color.Primary"
                Variant="Variant.Filled"
                Href="@ApplicationPages.Productos.Crear"
-               EndIcon="@Icons.Material.Filled.Add">
-        Alta de Producto
+               StartIcon="@Icons.Material.Filled.Add">
+        Alta de Productos
     </MudButton>
 </MudGrid>
 
