Implementada paracialmente funcionalidad para cortes de inventario. Implementada librería SweetAlert2. Implementado botón de carga para búsqueda de productos en pantalla de movimientos.

--- a/QUICK_INVENTORY.Client/Components/Routes.razor
+++ b/QUICK_INVENTORY.Client/Components/Routes.razor
@@ -1,17 +1,19 @@
 ﻿<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
-            <NotAuthorized>
-                @if (context.User.Identity?.IsAuthenticated != true)
-                {
-                    <RedirectToLogin />
-                }
-                else
-                {
-                    <p role="alert">You are not authorized to access this resource.</p>
-                }
-            </NotAuthorized>
-        </AuthorizeRouteView>
+        <CascadingValue Value="@ApplicationTheme">
+            <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
+                <NotAuthorized>
+                    @if (context.User.Identity?.IsAuthenticated != true)
+                    {
+                        <RedirectToLogin />
+                    }
+                    else
+                    {
+                        <p role="alert">You are not authorized to access this resource.</p>
+                    }
+                </NotAuthorized>
+            </AuthorizeRouteView>
+        </CascadingValue>
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
 </Router>
@@ -31,7 +33,7 @@
                     DrawerBackground = new MudColor("#403D39"),
                     DrawerIcon = new MudColor("#FFFFFF"),
                     DrawerText = new MudColor("#FFFFFF"),
-                    
+
                     Primary = new MudColor("#003D59"),
                     Secondary = new MudColor("#013243"),
                     Tertiary = new MudColor("#007BA7"),
