--- a/QUICK_INVENTORY.Client/_Imports.razor
+++ b/QUICK_INVENTORY.Client/_Imports.razor
@@ -17,6 +17,7 @@
 @using QUICK_INVENTORY.Client.Helpers.Services
 
 @using QUICK_INVENTORY.Shared.Helpers
+@using QUICK_INVENTORY.Shared.Helpers.Interfaces.Services
 @using QUICK_INVENTORY.Shared.Models
 @using QUICK_INVENTORY.Shared.Models.Requests
 @using QUICK_INVENTORY.Shared.Models.TableModels
@@ -25,3 +26,5 @@
 @using MudBlazor.Utilities
 
 @using Ardalis.Result
+
+@using CurrieTechnologies.Razor.SweetAlert2;
