Correcciones ligeras en alertas de error.

--- a/QUICK_INVENTORY.Client/Pages/ProductosMovimientos/Crear.razor
+++ b/QUICK_INVENTORY.Client/Pages/ProductosMovimientos/Crear.razor
@@ -242,7 +242,9 @@
                 }
                 else
                 {
-                    await SwalService.AlertaErrorInesperado(theme: ApplicationTheme);
+                    await SwalService.AlertaError(
+                        theme: ApplicationTheme,
+                        mensaje: result.Errors.First());
                 }
             });
     }
