--- a/QUICK_INVENTORY.Client/Pages/Productos/Crear.razor
+++ b/QUICK_INVENTORY.Client/Pages/Productos/Crear.razor
@@ -147,7 +147,9 @@
                 }
                 else
                 {
-                    await SwalService.AlertaErrorInesperado(theme: ApplicationTheme);
+                    await SwalService.AlertaError(
+                        theme: ApplicationTheme,
+                        mensaje: result.Errors.First());
                 }
             });
     }
