Agregado de forma bien braveadota el listado de detalles del corte actual de inventario.

--- a/QUICK_INVENTORY.Client/Layout/NavMenu.razor
+++ b/QUICK_INVENTORY.Client/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
     <AuthorizeView>
         <Authorized>
             <MudNavGroup Title="Movimientos" Expanded="true">
-                <MudNavLink Href="@ApplicationPages.Productos.Movimientos.Crear"
+                <MudNavLink Href="@ApplicationPages.Home"
                             Match="NavLinkMatch.All">
                     Alta de Entradas y Salidas
                 </MudNavLink>
@@ -33,7 +33,7 @@
             </MudNavGroup>
 
             <MudNavGroup Title="Inventario" Expanded="true">
-                <MudNavLink Href="@ApplicationPages.Inventario.Listado"
+                <MudNavLink Href="@ApplicationPages.Inventario.Corte.Actual"
                             Match="NavLinkMatch.All">
                     Inventario Actual
                 </MudNavLink>
