Correcciones ligeras e intento para meter envío de correos en el proyecto.

--- a/QUICK_INVENTORY.Client/Layout/NavMenu.razor
+++ b/QUICK_INVENTORY.Client/Layout/NavMenu.razor
@@ -38,10 +38,10 @@
                     Inventario Actual
                 </MudNavLink>
 
-                <MudNavLink Href="@ApplicationPages.Inventario.Corte.Listado"
+                @* <MudNavLink Href="@ApplicationPages.Inventario.Corte.Listado"
                             Match="NavLinkMatch.All">
                     Cortes de Inventario
-                </MudNavLink>
+                </MudNavLink> *@
             </MudNavGroup>
         </Authorized>
     </AuthorizeView>
